--- a/app/views/facts/index.html.erb
+++ b/app/views/facts/index.html.erb
@@ -5,4 +5,7 @@
 	<p>
 		<%= @puffin_fact %>
 	</p>
+	<p>
+		Wikipedia says: Puffins are any of three small species of alcids (auks) in the bird genus Fratercula with a brightly coloured beak during the breeding season.
+	</p>
 </div>
